<resources>
    <string name="app_name">Notes_Application</string>
    <string name="textview">No notes here.</string>
    <string name="textview1">Main Page</string>
    <string name="searchbar">Search note...</string>
    <string name="float_main">flt</string>
    <string name="edit1">Title</string>
    <string name="edit2">Description</string>
    <string name="button1">Save Note</string>
    <string name="button2">Cancel</string>
    <string name="empty">o</string>
</resources>