<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarThumbHorizontal="@color/white"
    android:scrollbarThumbVertical="@color/white">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Edit Note" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_marginTop="24dp"
        android:background="@color/blue"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2">

        <EditText
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/black"
            android:hint="@string/edit1"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#8D6E63" />

        <EditText
            android:id="@+id/descriptionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/black"
            android:gravity="top"
            android:hint="@string/edit2"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#8D6E63" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="151dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/yellowButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/yellow"
            android:contentDescription="@string/empty"
            android:onClick="changeBackgroundColor"
            tools:ignore="ButtonStyle,DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/orangeButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/orange"
            android:contentDescription="@string/empty"
            android:onClick="changeBackgroundColor"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/blueButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/blue"
            android:contentDescription="@string/empty"
            android:onClick="changeBackgroundColor"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ButtonLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="240dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:id="@+id/linearLayoutUC"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <Button
                android:id="@+id/upload_button"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:onClick="insertImage"
                android:text="Upload Image"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/capture_button"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:onClick="captureImage"
                android:text="Capture Image"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutUC">

            <Button
                android:id="@+id/save_button"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#397E3B"
                android:text="@string/button1"
                android:onClick="insertNote"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#7C0606"
                android:onClick="returnHome"
                android:text="@string/button2"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ButtonLayout"
        tools:srcCompat="@tools:sample/avatars"
        android:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>